# amc-showtime-alert

./: .gitignore  LICENSE  README.md  SERVICE_MANAGEMENT.md  alert-pipeline.service  amc_scraper.py  config.json  install-service.sh  pyproject.toml  run_alert_pipeline.py  telegram_notifier.py
.github/workflows/: amc-daily-pipeline.yml
amc_showtime_alert/: __init__.py  amc_scraper.py  notification_state.py  schema.py  special_events_parser.py  telegram_notifier.py
test/: test_deduplication.py  test_notification_state.py  test_scraper.py
