[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amc-showtime-alert"
version = "1.0.0"
description = "AMC Theatres showtime scraper with Telegram notifications"
requires-python = ">=3.6"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
amc-scraper = "amc_scraper:main"
amc-parser = "special_events_parser:main"
amc-telegram = "telegram_notifier:main"
